@@ -36,7 +36,7 @@ The library imposes some requirements on your C++ implementation (espcecially re
 
 -	IEEE 754 conformant single-precision `float` type (should be the case on most modern platforms).
 -	Support for C++11 fixed-width integer types from `<cstdint>`.
--	Support for certain C++11 single-precision mathematical functions from `<cmath>` for their half-precision counter-parts to work (**optional**).
+-	Support for certain C++11 single-precision mathematical functions from `<cmath>` for their half-precision counterparts to work (**optional**).
 -	Support for C++11 user-defined literals for half-precision literals to work (**optional**).
 -	Support for C++11 `std::hash` from `<functional>` (**optional**, only if hashing enabled by defining `HALF_ENABLE_HASH`).
 
@@ -70,7 +70,7 @@ half s = sin(abs(a));
 long l = lround(s);
 ~~~~
 
-Furthermore the library provides proper specializations for `std::numeric_limits`, defining various implementation properties, and `std::hash` for hashing half-precision numbers (the latter only if the preprocessor symbol `HALF_ENABLE_HASH` is defined when including half.hpp).
+Furthermore the library provides proper specializations for `std::numeric_limits`, defining various implementation properties, and `std::hash` for hashing half-precision numbers (the latter only if the preprocessor symbol `HALF_ENABLE_HASH` is defined when including half.hpp). Similar to the corresponding preprocessor symbols from `<cmath>` the library also defines the [HUGE_VALH](\ref HUGE_VALH) constant and maybe the [FP_FAST_FMAH](\ref FP_FAST_FMAH) symbol.
 
 Conversions													{#conversions}
 -----------
